force-app/main/default/objects/Opportunity/fields/Expected_Annual_Volume__c.field-meta.xml
<CustomField>
    <fullName>Expected_Annual_Volume__c</fullName>
    <label>Expected Annual Volume</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>