force-app/main/default/objects/Opportunity/fields/Is_Stale__c.field-meta.xml
<CustomField>
    <fullName>Is_Stale__c</fullName>
    <formula>NOT(IsClosed) &amp;&amp; (TODAY() - BLANKVALUE(LastActivityDate, DATEVALUE(CreatedDate))) &gt; $CustomMetadata.Apex_Demo_Setting__mdt.Default.Stale_Opportunity_Days__c</formula>
    <label>Is Stale</label>
    <type>Checkbox</type>
</CustomField>