force-app/main/default/objects/Opportunity/fields/Latest_Quote_Price__c.field-meta.xml
<CustomField>
    <fullName>Latest_Quote_Price__c</fullName>
    <inlineHelpText>Maintained by flow from the most recent quote line.</inlineHelpText>
    <label>Latest Quote Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>