force-app/main/default/objects/Opportunity/fields/Latest_Sample_Status__c.field-meta.xml
<CustomField>
    <fullName>Latest_Sample_Status__c</fullName>
    <inlineHelpText>Maintained by flow.</inlineHelpText>
    <label>Latest Sample Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>