force-app/main/default/objects/Opportunity/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lead this opportunity was created from (set by the Request Sample flow).</inlineHelpText>
    <label>Source Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Lead_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>