force-app/main/default/objects/Opportunity/fields/PO_Quantity__c.field-meta.xml
<CustomField>
    <fullName>PO_Quantity__c</fullName>
    <label>PO Quantity</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>