force-app/main/default/objects/Opportunity/fields/Primary_Product__c.field-meta.xml
<CustomField>
    <fullName>Primary_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Opportunities (Primary Product)</relationshipLabel>
    <relationshipName>Primary_Product_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>