force-app/main/default/objects/Opportunity/fields/Purchase_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Timeline__c</fullName>
    <label>Purchase Timeline</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediate</fullName>
            </value>
            <value>
                <fullName>3 Months</fullName>
            </value>
            <value>
                <fullName>6 Months</fullName>
            </value>
            <value>
                <fullName>12 Months</fullName>
            </value>
            <value>
                <fullName>Long Term</fullName>
            </value>
            <value>
                <fullName>&lt;3 Months</fullName>
                <isActive>false</isActive>
                <label>&lt;3 Months</label>
            </value>
            <value>
                <fullName>3-6 Months</fullName>
                <isActive>false</isActive>
                <label>3-6 Months</label>
            </value>
            <value>
                <fullName>6-12 Months</fullName>
                <isActive>false</isActive>
                <label>6-12 Months</label>
            </value>
            <value>
                <fullName>&gt;12 Months</fullName>
                <isActive>false</isActive>
                <label>&gt;12 Months</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>