force-app/main/default/objects/Opportunity/fields/Quote_Count__c.field-meta.xml
<CustomField>
    <fullName>Quote_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Maintained by flow.</inlineHelpText>
    <label>Quotes</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>