force-app/main/default/objects/Opportunity/fields/Sample_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Sample_Approved_Date__c</fullName>
    <inlineHelpText>Set automatically when a linked sample request is approved.</inlineHelpText>
    <label>Sample Approved Date</label>
    <type>Date</type>
</CustomField>