force-app/main/default/objects/Opportunity/fields/Sample_Request_Count__c.field-meta.xml
<CustomField>
    <fullName>Sample_Request_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Maintained by flow.</inlineHelpText>
    <label>Sample Requests</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>