force-app/main/default/objects/Opportunity/fields/Technical_Evaluation_Status__c.field-meta.xml
<CustomField>
    <fullName>Technical_Evaluation_Status__c</fullName>
    <label>Technical Evaluation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>