force-app/main/default/objects/Opportunity/validationRules/VR_Closed_Lost_Needs_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Closed_Lost_Needs_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(StageName, "Closed Lost") &amp;&amp; ISBLANK(TEXT(Loss_Reason__c))</errorConditionFormula>
    <errorDisplayField>Loss_Reason__c</errorDisplayField>
    <errorMessage>Select a Loss Reason before closing the opportunity as lost, so the relationship can be re-engaged later.</errorMessage>
</ValidationRule>