force-app/main/default/objects/Opportunity/validationRules/VR_PO_Received_Needs_PO.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_PO_Received_Needs_PO</fullName>
    <active>true</active>
    <errorConditionFormula>CASE(TEXT(StageName), "PO Received", 1, "Closed Won", 1, 0) = 1 &amp;&amp; (ISBLANK(PO_Number__c) || ISBLANK(PO_Date__c))</errorConditionFormula>
    <errorDisplayField>PO_Number__c</errorDisplayField>
    <errorMessage>PO Number and PO Date are required for PO Received and Closed Won.</errorMessage>
</ValidationRule>