force-app/main/default/objects/Opportunity/validationRules/VR_Quotation_Stages_Need_Quote.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Quotation_Stages_Need_Quote</fullName>
    <active>true</active>
    <errorConditionFormula>CASE(TEXT(StageName), "Quotation Sent", 1, "Negotiation", 1, "Customer Approval", 1, 0) = 1 &amp;&amp; Quote_Count__c = 0</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>Create a Quote for this opportunity before moving to Quotation Sent, Negotiation or Customer Approval.</errorMessage>
</ValidationRule>