force-app/main/default/objects/Opportunity/validationRules/VR_Sample_Requested_Needs_Sample.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Sample_Requested_Needs_Sample</fullName>
    <active>true</active>
    <description>Stage = Sample Requested requires at least one Sample Request.</description>
    <errorConditionFormula>NOT(ISNEW()) &amp;&amp; ISCHANGED(StageName) &amp;&amp; ISPICKVAL(StageName, "Sample Requested") &amp;&amp; Sample_Request_Count__c = 0</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>Create a Sample Request for this opportunity before setting the stage to Sample Requested.</errorMessage>
</ValidationRule>