force-app/main/default/objects/Opportunity/validationRules/VR_Technical_Evaluation_Needs_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Technical_Evaluation_Needs_Status</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(StageName, "Technical Evaluation") &amp;&amp; ISBLANK(TEXT(Technical_Evaluation_Status__c))</errorConditionFormula>
    <errorDisplayField>Technical_Evaluation_Status__c</errorDisplayField>
    <errorMessage>Set the Technical Evaluation Status when the opportunity is in Technical Evaluation.</errorMessage>
</ValidationRule>