force-app/main/default/objects/Opportunity/listViews/Apex_Open_Pipeline.listView-meta.xml
<ListView>
    <fullName>Apex_Open_Pipeline</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>Primary_Product__c</columns>
    <columns>Expected_Annual_Volume__c</columns>
    <columns>Latest_Sample_Status__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Apex Open Pipeline</label>
</ListView>