force-app/main/default/objects/Opportunity/listViews/Apex_Stale_Opportunities.listView-meta.xml
<ListView>
    <fullName>Apex_Stale_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Days_Since_Last_Activity__c</columns>
    <columns>Next_Action__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Stale__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Apex Stale Opportunities</label>
</ListView>